Wrapping contetn templates form causes double scroll, also footer's been fixed so its sticky now and Save button has more spacing.

--- a/packages/veritone-widgets/src/widgets/MediaDetails/styles.scss
+++ b/packages/veritone-widgets/src/widgets/MediaDetails/styles.scss
@@ -212,10 +212,4 @@
   .metadataSidePanel {
     width: 360px;
   }
-
-  .contentTemplatesContent {
-    padding-right: 100px;
-    padding-bottom: 20px;
-    overflow-y: scroll;
-  }
 }
